--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -5,9 +5,50 @@
 }
 
 /*header*/
-body{
-    background-color: rgb(226, 226, 226);
+
+@keyframes colorBody {
+    0%{
+        background-color: #877E86;
+    }
+    10%{
+        background-color: #999299;
+    } 
+    20%{
+        background-color: #AAA5AC;
+    }
+    30%{
+        background-color: #BCB9BE;
+    }
+    40%{
+        background-color: #CFCDD1;
+    }
+    50%{
+        background-color: #E1E1E3;
+    }
+    60%{
+        background-color: #CFCDD1;
+    }
+    70%{
+        background-color: #BCB9BE;
+    }
+    80%{
+        background-color: #AAA5AC;
+    }
+    90%{
+        background-color: #999299;
+    } 
+    100%{
+        background-color: #877E86;
+    }
 }
+
+body{
+    animation-name: colorBody;
+    animation-duration: 30s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+
 .header {
     height:15vh;
     display: flex;
@@ -38,7 +79,7 @@ body{
     align-content: center;
 }
 .nav ul {
-    margin: 2rem 0;
+    margin: 1rem 0;
     padding: 0;
     width: 100%;
     display: flex;
@@ -67,17 +108,21 @@ body{
 
 /*main inicio*/
 .mainInicio{
-    margin: auto;
-    padding: 0;
+    margin: 0 auto;
     width: 90vw;
-    height:auto;
+    height:100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+
 }
 .mainInicio__carousel {
-
+    margin: 0 auto;
     width: 100%;
     height: 100%;
-    margin: 0 auto;
 }
+
 
 /*fin main inicio*/
 
@@ -94,8 +139,8 @@ body{
     justify-content: space-evenly;
 }   
 .sectionCard{
-    margin: 1rem auto;
-    padding: 1rem;
+    margin: .5rem auto;
+    padding: 1.5rem;
     background-color: rgb(190, 190, 190);
     width: auto;
     display: flex;
@@ -105,21 +150,28 @@ body{
     align-content: center;
 }
 .sectionCardImage{
+    margin: 2rem;
     background-color:rgb(99, 96, 91);
-    width: 150px;
-    height: 150px;
+    width: 100px;
+    height: 100px;
     background-image: url(../imagenes/granos-de-cafe.png);
     background-size:50px;
+    transform: scale(1,1);
+    transition: transform background-color 1s;
+}
+
+.sectionCardImage:hover{
+    transform: scale(2,2);
 }
 .sectionCardH3{
-    margin: 1rem;
-    height: 5rem;
+    padding-top:1rem;
+    margin: 3rem 0 1rem;
+    height: 4rem;
     width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-content: center;
-
+    align-content:flex-end;
 }
 .sectionCardTexto{
     width: 100%;
@@ -130,7 +182,7 @@ body{
     align-content: flex-start;
 
 }
-.productosBoton{
+.comprarBoton{
     background-color:rgb(99, 96, 91);
 }
 /* fin main productos */
@@ -247,43 +299,49 @@ iframe{
 .main__cursos {
     margin: 0 auto;
     width: 90vw;
-    height:100%;
+    height:90vh;
     background:linear-gradient(to left, rgba(218, 214, 214, 0.63), rgba(163, 163, 163, 0.63));
 
 }
 .main__cursos__card{
     margin: 0 auto;
-    padding: 1rem;
-    width: 45vw;
-    height: 50vh;
+    padding-top: 1rem;
+    width: 85vw;
+    height: 80vh;
     display: flex;
-    flex-direction:row;
-    flex-wrap: wrap;
+    flex-direction:column;
     justify-content: center;
     align-items: center;
-    column-gap: 1vw;
+    
 }
 
 .main__cursos__card__img{
-    background-color:rgb(99, 96, 91);
-    width: 20vw;
-    height:35vh;
-    background-image: url(../imagenes/granos-de-cafe.png);
-    background-size:50px;
+    height: 65vh;
     display: flex;
     flex-direction: column;
     align-content: center;
+    justify-content: center;
 }
 
-.main__cursos__card__titulo{
-    width: 20vw;
-    height: 35vh;
+.main__cursos__card p{
+    width: 100%;
+    height: 25vh;
     font-weight: bold;
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.contBoton{
+    height: 6rem;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
 }
+
 
 /*fin main cursos*/
 
@@ -293,7 +351,7 @@ iframe{
     width: 100vw;
     margin: 2rem auto 0;
     height: 30vh;
-    background-color:  rgb(34, 51, 59);
+    background-color:  #494242;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -357,14 +415,6 @@ iframe{
 /* inicio media 1024px */
 @media screen and (max-width: 1024px) {
 
-
-.mainInicio__carousel {
-    width: 100%;
-    height: auto;
-    margin: 0 auto;
-}
-
-
 .main__productos{
     width: 90vw;
     padding: 1rem;
@@ -421,55 +471,23 @@ iframe{
 }
 /* fin media 1024px */
 
-/* inicio media 1000px */
-@media screen and (max-width: 1000px){
-
-.main__cursos {
+/* inicio media 768px */
+@media screen and (max-width: 768px){
+.mainInicio{
     margin: 0 auto;
     width: 90vw;
     height:auto;
-    background:linear-gradient(to left, rgba(218, 214, 214, 0.63), rgba(163, 163, 163, 0.63));
-
-}
-.main__cursos__card{
-    margin: 0 auto;
-    padding: 1rem;
-    width: auto;
-    height: auto;
     display: flex;
-    flex-direction:column;
-    flex-wrap: none;
     justify-content: center;
     align-items: center;
-    row-gap: 1vh;
-}
-
-.main__cursos__card__img{
-    background-color:rgb(99, 96, 91);
-    width: 50%;
-    height:35vh;
-    background-image: url(../imagenes/granos-de-cafe.png);
-    background-size:50px;
-    display: flex;
-    flex-direction: column;
     align-content: center;
-}
 
-.main__cursos__card__titulo{
+}
+.mainInicio__carousel {
+    margin: 0 auto;
     width: 100%;
     height: 100%;
-    font-weight: bold;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
 }
-
-}
-/* fin media 1000px */
-/* inicio media 768px */
-@media screen and (max-width: 768px){
-
 
 .nav ul {
         display: flex;
@@ -497,8 +515,8 @@ iframe{
     justify-content: space-evenly;
 }   
 .sectionCard{
-    margin: 1rem auto;
-    padding: 1rem;
+    margin: .5rem auto;
+    padding: 1.5rem;
     background-color: rgb(190, 190, 190);
     width: auto;
     display: flex;
@@ -508,21 +526,28 @@ iframe{
     align-content: center;
 }
 .sectionCardImage{
+    margin: 2rem;
     background-color:rgb(99, 96, 91);
-    width: 150px;
-    height: 150px;
+    width: 100px;
+    height: 100px;
     background-image: url(../imagenes/granos-de-cafe.png);
     background-size:50px;
+    transform: none;
+    transition:none;
+}
+
+.sectionCardImage:hover{
+    transform: none;
 }
 .sectionCardH3{
-    margin: 1rem;
-    height: 5rem;
+    padding-top:1rem;
+    margin: 3rem 0 1rem;
+    height: 4rem;
     width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-content: center;
-
+    align-content:flex-end;
 }
 .sectionCardTexto{
     width: 100%;
@@ -533,7 +558,9 @@ iframe{
     align-content: flex-start;
 
 }
-
+.comprarBoton{
+    background-color:rgb(99, 96, 91);
+}
 
 .main__contacto__form{
     margin-bottom: 1rem;
@@ -541,41 +568,46 @@ iframe{
 
 .main__cursos {
     margin: 0 auto;
-    width: 90vw;
-    height:auto;
+    width: 100%;
+    height:100%;
     background:linear-gradient(to left, rgba(218, 214, 214, 0.63), rgba(163, 163, 163, 0.63));
 
 }
 .main__cursos__card{
     margin: 0 auto;
-    padding: 1rem;
-    width: auto;
-    height: auto;
+    padding-top: 1rem;
+    width: 85vw;
+    height: 80vh;
     display: flex;
     flex-direction:column;
-    flex-wrap: none;
     justify-content: center;
     align-items: center;
-    row-gap: 1vh;
+    
 }
 
 .main__cursos__card__img{
-    background-color:rgb(99, 96, 91);
-    width:50%;
-    height:35vh;
-    background-image: url(../imagenes/granos-de-cafe.png);
-    background-size:50px;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-content: center;
+    justify-content: center;
 }
 
-.main__cursos__card__titulo{
+.main__cursos__card p{
     width: 100%;
-    height: 100%;
+    height: 25vh;
     font-weight: bold;
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.contBoton{
+    height: 6rem;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
 }
@@ -678,166 +710,252 @@ iframe{
 
 @media screen and (max-width: 612px){
 
-    .main__productos{
-        width: 90vw;
-        padding: 1rem;
-        margin: 0 auto;
-        height:auto;
-        background:linear-gradient(to left, rgba(218, 214, 214, 0.63), rgba(163, 163, 163, 0.63));
-        display:flex;
-        flex-direction: row;
-        justify-content: space-evenly;
-    }   
-    .sectionCard{
-        margin: 1rem auto;
-        padding: 1rem;
-        background-color: rgb(190, 190, 190);
-        width: auto;
-        display: flex;
-        flex-direction: column;
-        justify-content:center ;
-        align-items: center;
-        align-content: center;
-    }
-    .sectionCardImage{
-        background-color:rgb(99, 96, 91);
-        width: 150px;
-        height: 150px;
-        background-image: url(../imagenes/granos-de-cafe.png);
-        background-size:50px;
-    }
-    .sectionCardH3{
-        margin: 1rem;
-        height: 5rem;
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-content: center;
-    
-    }
-    .sectionCardTexto{
-        width: 100%;
-        height: auto;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-content: flex-start;
 
-    }
+.mainInicio{
+    margin: 0 auto;
+    width: 90vw;
+    height:auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
 
-    .main__nosotros{
-        margin: 0 auto;
-        height: 100%;
-        width: 90vw;
-        background:linear-gradient(to left, rgba(218, 214, 214, 0.63), rgba(163, 163, 163, 0.63));
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-    }
+}
+.mainInicio__carousel {
+    margin: 0 auto;
+    width: 100%;
+    height: 100%;
+}
+
+.main__productos{
+    width: 90vw;
+    padding: 1rem;
+    margin: 0 auto;
+    height:auto;
+    background:linear-gradient(to left, rgba(218, 214, 214, 0.63), rgba(163, 163, 163, 0.63));
+    display:flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}   
+.sectionCard{
+    margin: 1rem auto;
+    padding: 1rem;
+    background-color: rgb(190, 190, 190);
+    width: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content:center ;
+    align-items: center;
+    align-content: center;
+}
+.sectionCardImage{
+    background-color:rgb(99, 96, 91);
+    width: 150px;
+    height: 150px;
+    background-image: url(../imagenes/granos-de-cafe.png);
+    background-size:50px;
+}
+.sectionCardH3{
+    margin: 1rem;
+    height: 5rem;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+
+}
+.sectionCardTexto{
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: flex-start;
+
+}
+
+.main__nosotros{
+    margin: 0 auto;
+    height: 100%;
+    width: 90vw;
+    background:linear-gradient(to left, rgba(218, 214, 214, 0.63), rgba(163, 163, 163, 0.63));
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.main__nosotros__card{
+    margin: 0 auto;
+    padding: 1rem;
+    width:auto;
+    height: auto;
+    display: flex;
+    flex-direction:column ;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+}
+.main__nosotros__card2{
+    margin: 0 auto;
+    padding: 2rem;
+    width:auto;
+    height: auto;
+    display: flex;
+    flex-direction:column;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+
+}
+.main__nosotros__card__img{
+    width:300px;
+    height: 200px;
+    background-image: url(../imagenes/cafecover.jpg);
+    display: flex;
+    justify-content: center;
+}
+.main__nosotros__card__img2{
+    width:300px;
+    height: 200px;
+    background-image: url(../imagenes/cafecover.jpg);
+    display: flex;
+    justify-content: center;
+}
+.main__nosotros__card__texto{
+    width: 100%;
+    padding: 1rem;
+    font-size: x-large;
+    font-style: italic;
+    font-weight: bolder;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.main__nosotros__card__texto2{
+    width: 100%;
+    padding: 1rem;
+    font-size: large;
+    font-weight: 600;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.main__cursos {
+    margin: 0 auto;
+    width: 100%;
+    height:100%;
+    background:linear-gradient(to left, rgba(218, 214, 214, 0.63), rgba(163, 163, 163, 0.63));
+
+}
+.main__cursos__card{
+    margin: 0 auto;
+    padding-top: 1rem;
+    width: 85vw;
+    height: 80vh;
+    display: flex;
+    flex-direction:column;
+    justify-content: center;
+    align-items: center;
     
-    .main__nosotros__card{
-        margin: 0 auto;
-        padding: 1rem;
-        width:auto;
-        height: auto;
-        display: flex;
-        flex-direction:column ;
-        justify-content: center;
-        align-items: center;
-        align-content: center;
-    }
-    .main__nosotros__card2{
-        margin: 0 auto;
-        padding: 2rem;
-        width:auto;
-        height: auto;
-        display: flex;
-        flex-direction:column;
-        justify-content: center;
-        align-items: center;
-        align-content: center;
-    
-    }
-    .main__nosotros__card__img{
-        width:300px;
-        height: 200px;
-        background-image: url(../imagenes/cafecover.jpg);
-        display: flex;
-        justify-content: center;
-    }
-    .main__nosotros__card__img2{
-        width:300px;
-        height: 200px;
-        background-image: url(../imagenes/cafecover.jpg);
-        display: flex;
-        justify-content: center;
-    }
-    .main__nosotros__card__texto{
-        width: 100%;
-        padding: 1rem;
-        font-size: x-large;
-        font-style: italic;
-        font-weight: bolder;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-    .main__nosotros__card__texto2{
-        width: 100%;
-        padding: 1rem;
-        font-size: large;
-        font-weight: 600;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    
-        
-    }
-    
-    .main__cursos {
-        margin: 0 auto;
-        width: 90vw;
-        height:auto;
-        background:linear-gradient(to left, rgba(218, 214, 214, 0.63), rgba(163, 163, 163, 0.63));
-    
-    }
-    .main__cursos__card{
-        margin: 0 auto;
-        padding: 1rem;
-        width: auto;
-        height: auto;
-        display: flex;
-        flex-direction:column;
-        flex-wrap: none;
-        justify-content: center;
-        align-items: center;
-        row-gap: 1vh;
-    }
-    
-    .main__cursos__card__img{
-        background-color:rgb(99, 96, 91);
-        width:50%;
-        height:25vh;
-        background-image: url(../imagenes/granos-de-cafe.png);
-        background-size:50px;
-        display: flex;
-        flex-direction: column;
-        align-content: center;
-    }
-    
-    .main__cursos__card__titulo{
-        width: 100%;
-        height: 100%;
-        font-weight: bold;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-    
+}
+
+.main__cursos__card__img{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+}
+
+.main__cursos__card p{
+    width: 100%;
+    height: 25vh;
+    font-weight: normal;
+    font-size: small;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.contBoton{
+    height: 6rem;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer{
+    width: 100vw;
+    margin: 2rem auto 0;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    align-items: stretch;
+    column-gap: 1rem;
+}
+
+.footer__item{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    justify-content: space-between;
+}
+.footer__item h3{
+    margin: 0;
+    padding: 0;
+    font-size: larger;
+    font-weight: bolder;
+    color:floralwhite;
+    text-decoration: underline;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    width: 100%;
+    height: 8rem;
+}
+
+
+.footer ul{
+    width: 100%;
+    height: 4rem;
+    list-style:none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items:flex-start;
+    align-content: flex-start;
+}
+
+.footer ul li{
+    color:floralwhite;
+    font-size: large;
+    font-weight: lighter;
+}
+
+.footer ul li a{
+    color:floralwhite;
+    font-style: italic;
+    font-size: large;
+}
+
+
+
 }
 
 /* fin media 612px */
@@ -907,17 +1025,65 @@ iframe{
     margin-bottom: 1rem;
 }
 
+.main__cursos {
+    margin: 0 auto;
+    width: 100%;
+    height:100%;
+    background:linear-gradient(to left, rgba(218, 214, 214, 0.63), rgba(163, 163, 163, 0.63));
+
+}
+.main__cursos__card{
+    margin: 0 auto;
+    padding-top: 1rem;
+    width: 100%;
+    height: 80vh;
+    display: flex;
+    flex-direction:column;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.main__cursos__card__img{
+    height: 65vh;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+}
+
+.main__cursos__card p{
+    width: 100%;
+    height: auto;
+    font-size: small;
+    font-weight: normal;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.contBoton{
+    height: 6rem;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+
 .footer{
 width: auto;
 height: auto;
 display: flex;
-flex-direction:column-reverse;
+flex-direction:column;
 column-gap: 5px;
 }
         
 .footer__item{
     padding: 0;
-    height:40vh;
+    height:20vh;
     width:100%;
     display: flex;
     flex-direction: column;
@@ -926,8 +1092,9 @@ column-gap: 5px;
 }
 .footer__item h3{
     padding: 0rem;
-    height: 10vh;
+    height: 6vh;
     width: 90%;
+    font-weight: normal;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -935,7 +1102,7 @@ column-gap: 5px;
 }
 .footer ul li{
     margin: 0;
-    font-size: 100%;
+    font-size: small;
     height: 9vh;
     width: 100vw;
     display: flex;
@@ -946,7 +1113,7 @@ column-gap: 5px;
 
 }
 .footer ul li a{
-    font-size: 100%;
+    font-size: small;
     height: 100%;
     width: 90%;
     display: flex;
